--- a/docs/report_card_template.qmd
+++ b/docs/report_card_template.qmd
@@ -10,22 +10,13 @@ format:
     linestretch: 1
     indent: true
     include-in-header: template.tex    
-<<<<<<< HEAD
  #   documentclass: "article"
-=======
-    # documentclass: "article"
->>>>>>> f0f6eb0b4d51f61487e46d6b3e3a7aab6d1cd557
     keep-tex: true
     papersize: letter
 params:
   widths: !expr c(0.9, 0.75, 3, 3)
-<<<<<<< HEAD
   img1: !expr here::here("images/0521_conceptual model.png")
   img2: !expr here::here("images/risk_plot_new.png")
-=======
-  img1: !expr here::here("images/0521_conceptual_model.png")
-  img2: !expr here::here("images/risk_chart.png")
->>>>>>> f0f6eb0b4d51f61487e46d6b3e3a7aab6d1cd557
   img3: !expr here::here("images/squibs_data.png")
   img4: !expr here::here("images/noaa_logo.png")
   tbl_file: !expr here::here("docs/table_template.xlsx")
@@ -47,11 +38,7 @@ devtools::load_all(here::here("../READ-EDAB-NEesp2"))
  }
 \BgThispage 
 
-<<<<<<< HEAD
 \vspace{-2.0cm}
-=======
-\vspace{-2cm}
->>>>>>> f0f6eb0b4d51f61487e46d6b3e3a7aab6d1cd557
 \section{Spring 2026} 
 
 ::::: {layout="[[0.575, 0.025, 0.4]] "}
@@ -59,7 +46,6 @@ devtools::load_all(here::here("../READ-EDAB-NEesp2"))
 :::: {}
 
 :::{}
-\vspace{0.5cm}
 \raggedright
 \section{Key Findings from the Life History Working Group}
 
@@ -69,12 +55,12 @@ Growth is estimated to be 1 statolith ring/day, per multiple literature sources.
 \vspace{0.25cm}
 
 \subsection{Maturity (from SQUIBS)}
-In 2024, most stage 4 squid caught in summer with very little mature squid caught the rest of the year. Highest numbers of immature (stage 1) squid were caught in the second half of 2024. In 2025 (Jan-Apr), squid caught represent largely intermediate maturity stages (2+3) with few stage 1 and stage 4. Of 912 squid assessed, the dominant maturity stage in females increases from Fall (1) -> Winter (2) -> Spring (3). The highest percentage of mature male squid were caught in spring and summer. No stage 4 females and very few stage 1 males were caught.
+In 2024, most stage 4 squid caught in summer with very little mature squid caught the rest of the year. Highest numbers of stage 1 squid were caught in the second half of 2024. Of 912 squid assessed, the dominant maturity stage in females increases from fall to spring. The highest percentage of mature male squid were caught in spring and summer. No stage 4 females and very few stage 1 males were caught.
 
 \vspace{0.25cm}
 
 \subsection{Migration and movement dynamics}
-Literature review and recent work by Dave Richardson suggests the possibility of a winter cohort that hatches south of Cape Hatteras and subsequently migrates onto the Northeast U.S. continental shelf. Fishery observations describe a spatial gradient of 1-6 cm mantle length (ML) squid from waters south of Hatteras through southern New England, with the smallest squid detected further south. The Gulf Stream and warm core rings may facilitate the recruitment transport of juvenile squid (Richardson WP).
+Recent studies suggest the possibility of a winter cohort that hatches south of Cape Hatteras and subsequently migrates onto the Northeast U.S. continental shelf. Fishery observations describe a spatial gradient of 1-6 cm mantle length (ML) squid from waters south of Hatteras through southern New England, with the smallest squid detected further south. The Gulf Stream and warm core rings may facilitate the recruitment transport of juvenile squid (Richardson WP).
 
 \vspace{0.25cm}
 
@@ -87,7 +73,7 @@ Consideration of the hypothesis of a winter cohort spawning south of Hatteras in
 Although natural mortality is expected to be age-dependent, lack of accurate age data makes further study difficult. Multiple natural mortality approximations could be developed to match lifespan hypotheses. Intraspecific predation impacts natural mortality, but there is no available data to quantify the amount of mortality this causes.
 :::
 
-\vspace{0.5cm}
+\vspace{0.25cm}
 
 :::{}
 ![](`r params$img1`)
@@ -101,7 +87,6 @@ Although natural mortality is expected to be age-dependent, lack of accurate age
 
 ::::{}
 :::{}
-\vspace{0.5cm}
 \section{Longfin Squid Age Frequency from SQUIBS dataset}
 ![](`r params$img3`)
 :::
@@ -125,11 +110,7 @@ In the [2025 Mid-Atlantic EAFM Risk Assessment Update](https://static1.squarespa
   - As it pertains to maximizing commercial fishery value based on net revenue and revenue, cost, and  profitability indice findings 
 - Moderate-high risk to Commercial Fishery Resilience – Fleet Diversity 
   - Driven by 21 year down-ward trend of the Mid-Atlantic Fleet Count indicator 
-
-
 :::
-
-\vspace{0.25cm}
 
 :::{}
 ![](`r params$img2`)
